k8s/minio/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio
        ports:
          - containerPort: 9000
          - containerPort: 9001
        volumeMounts:
        - name: minio-storage
          mountPath: /data
        command:
          - "minio"
          - "server"
          - "/data"
          - "--console-address"
          - ":9001"

      volumes:
      - name: minio-storage
        persistentVolumeClaim:
          claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio-server
  namespace: minio
spec:
  clusterIP: None
  selector:
    app: minio
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: minio-loadbalancer
  namespace: minio
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      port: 9001
      targetPort: 9001
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: minio
  name: allow-services-to-minio
spec:
  podSelector:
    matchLabels:
      app: minio
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: services
    ports:
    - protocol: TCP
      port: 9000
